[package]
name = "sleep-utils"
version = "0.2.0"
edition = "2021"
description = "Smart sleep utilities with flexible input formats and automatic zero-value handling"
authors = ["YeMiancheng <ymc.github@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymc-github/sleep-utils"
readme = "README.md"
documentation = "https://docs.rs/sleep-utils"
keywords = ["sleep", "duration", "time", "thread"]
categories = ["date-and-time", "concurrency", "development-tools"]

[dependencies]
thiserror = "1.0"
regex = "1.0"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["full"]
full = []  # All features enabled
minimal = []  # Minimal feature set without complex parsing

[package.metadata.docs.rs]
all-features = true